# pinocchio-multisig

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/helper/: account_checks.rs  account_close.rs  mod.rs
src/instructions/: add_member.rs  close_proposal.rs  create_proposal.rs  create_transaction.rs  execute_transaction.rs  init_multisig.rs  mod.rs  remove_member.rs  update_instructions.rs  update_members.rs  update_multisig.rs  vote.rs
src/state/: member.rs  mod.rs  multisig.rs  multisig_config.rs  proposal.rs  transaction.rs  vote.rs
tests/: create_proposal_test.rs  create_tx_test.rs  exec_tx_test.rs  full-close-test.js  init_multisig_test.rs  mock-close-test.js  package.json  simple-close-test.js  unit.rs  vote_tests.rs
tests/common/: mod.rs
