[package]
name = "pinocchio-multisig"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# [dependencies]
# pinocchio = "0.8.1"
# pinocchio-system = "0.2.0"
# pinocchio-token = "0.3.0"
# pinocchio-log = "0.4.0"
# pinocchio-pubkey = "0.2.4"
[dependencies]
pinocchio = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio.git" }
shank = "0.4.2"
bytemuck = { version = "1.23.2", features = ["derive"] }

[features]
default = []
std = []

[dev-dependencies]
litesvm = "0.8.1"
solana-client = "3.0.5"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-program = "3.0.0"
solana-signer = "3.0.0"
solana-signature = "3.1.0"
solana-system-program = "3.0.5"
solana-sysvar = "3.0.0"
solana-transaction = "3.0.1"
hex = "0.4"
